--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Video transcoding as example serverless project from MEAP book Serverless Architectures.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "run-local-lambda --file index.js --event tests/event.json",
+    "deploy": "aws lambda update-function-code --function-name transcode-video --zip-file fileb://Lambda-Deployment.zip",
+    "predeploy": "zip -r Lambda-Deployment.zip * -x *.zip *.json *.log"
   },
   "keywords": [
     "tutorial",
@@ -19,5 +21,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/bbarrington42/transcode-video.git"
+  },
+  "devDependencies": {
+    "run-local-lambda": "^1.1.1"
   }
 }
